add: chat space

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
-version: '3'
+version: '3.9'
+volumes:
+  mysql-volume:
 services:
   nginx:
     image: nginx:latest
@@ -28,7 +30,7 @@ services:
     ports:
       - 13306:3306
     volumes:
-      - ./mysql/data:/var/lib/mysql
+      - mysql-volume:/var/lib/mysql
     environment:
         MYSQL_DATABASE: private_chat
         MYSQL_ROOT_PASSWORD: password
