--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - 5050:80
+      - ${WEB_PORT}:80
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     #  - ./www/html:/var/www/html
@@ -15,7 +15,7 @@ services:
 
   php:
     ports:
-      - 5173:5173
+      - ${VITE_PORT}:5173
     build: ./php
     volumes:
     #  - ./www/html:/var/www/html
@@ -28,17 +28,17 @@ services:
     image: mysql:5.7
     container_name: db-host
     ports:
-      - 13306:3306
+      - ${DB_PORT}:3306
     volumes:
       - mysql-volume:/var/lib/mysql
     environment:
-        MYSQL_DATABASE: private_chat
-        MYSQL_ROOT_PASSWORD: password
+        MYSQL_DATABASE: ${DB_NAME}
+        MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
 
   phpmyadmin:
     platform: linux/x86_64
     image: phpmyadmin/phpmyadmin:5
     ports:
-      - 8888:80
+      - ${PHP_MYADMIN_PORT}:80
     depends_on:
       - db
