--- a/server/private_chat/package.json
+++ b/server/private_chat/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.1.14",
         "sass": "^1.55.0",
         "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/vue-fontawesome": "^3.0.3"
     }
 }
