--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -25,3 +25,7 @@ ENV PATH $PATH:/composer/vendor/bin
 WORKDIR /var/www
 RUN composer global require "laravel/installer"
 
+RUN git clone https://github.com/phpredis/phpredis.git /usr/src/php/ext/redis && \
+  docker-php-ext-install redis
+
+
