--- a/server/private_chat/package.json
+++ b/server/private_chat/package.json
@@ -18,6 +18,10 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@fortawesome/vue-fontawesome": "^3.0.3"
+        "@fortawesome/vue-fontawesome": "^3.0.3",
+        "laravel-echo": "^1.11.1",
+        "laravel-echo-server": "^1.6.2",
+        "socket.io": "^2.4.0",
+        "socket.io-client": "^2.4.0"
     }
 }
